# rust_dump

./: .gitignore  README.md
aoc_2023/day_2/: Cargo.toml
cheat_sheet/src/: main.rs
cs/src/: main.rs
fibonacci/: Cargo.toml
fibonacci/src/: main.rs
number_guesser/: Cargo.toml
number_guesser/src/: main.rs
port_sniffer/: Cargo.toml
port_sniffer/src/: main.rs
rustlings/exercises/: quiz1.rs
rustlings/exercises/functions/: functions1.rs  functions3.rs
rustlings/exercises/intro/: intro2.rs
rustlings/exercises/primitive_types/: primitive_types1.rs  primitive_types2.rs
rustlings/exercises/vecs/: vecs1.rs
todo/: Cargo.toml
todo/src/: args.rs  backup.rs  main.rs
windows/: Cargo.toml
