[package]
name = "port_sniffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
bpaf = { version = "0.9.6", features = ["derive", "bright-color"] }
